--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
     </div>
 </main>
 
+<!-- About Me Section -->    
 <section id="about" class="section">
     <div class="section-content">
         <h2>About Me</h2>
@@ -328,6 +329,8 @@
             <a href="mybeats.html" class="about-btn">My Beats</a>
             <a href="myfilm.html" class="about-btn">My Film Movies</a>
             <a href="myfilmtv.html" class="about-btn">My Film TV Shows</a>
+            <a href="collage.html" class="about-btn">Dream Places To Visit</a>
+            <a href="bucket.html" class="about-btn">My Bucket List</a>
         </div>
         
         <a href="#top" class="back-to-top">Back to Top</a>
@@ -356,6 +359,8 @@
     </div>
 </section>
 
+
+<!-- Contacts Section -->    
 <section id="contacts" class="section">
     <div class="section-content">
         <h2>Contacts</h2>
@@ -383,6 +388,7 @@
 
 </body>
 </html>
+
 
 
 
