--- a/index.html
+++ b/index.html
@@ -240,8 +240,9 @@
             color: var(--primary-red);
         }
 
+        
         .about-buttons {
-            margin-top: 2rem;
+            margin-top: 2rem; /*1 rem = 16px*/
             display: flex;
             gap: 1rem;
             flex-wrap: wrap;
@@ -326,11 +327,14 @@
         </p>
 
         <div class="about-buttons">
-            <a href="mybeats.html" class="about-btn">My Beats</a>
-            <a href="myfilm.html" class="about-btn">My Film Movies</a>
-            <a href="myfilmtv.html" class="about-btn">My Film TV Shows</a>
-            <a href="collage.html" class="about-btn">Dream Places To Visit</a>
-            <a href="bucket.html" class="about-btn">My Bucket List</a>
+          <a href="mybeats.html" class="about-btn">My Beats</a>
+          <a href="myfilm.html" class="about-btn">My Film Movies</a>
+          <a href="myfilmtv.html" class="about-btn">My Film TV Shows</a>
+        </div>
+
+        <div class="about-buttons">
+          <a href="collage.html" class="about-btn">Dream Places To Visit</a>
+          <a href="bucket.html" class="about-btn">My Bucket List</a>
         </div>
         
         <a href="#top" class="back-to-top">Back to Top</a>
@@ -388,6 +392,7 @@
 
 </body>
 </html>
+
 
 
 
