--- a/collage.html
+++ b/collage.html
@@ -36,27 +36,27 @@
 
         /* Specific positions based on your image */
         
-        .shinjuku-cat { /* Large vertical on left */
+        .japan { /* Large vertical on left */
             grid-row: 1 / 5;
             grid-column: 1 / 2;
         }
 
-        .eiffel-tower { /* Top wide rectangle */
+        .paris { /* Top wide rectangle */
             grid-row: 1 / 2;
             grid-column: 2 / 4;
         }
 
-        .pagoda { /* Middle tall-ish rectangle */
+        .china { /* Middle tall-ish rectangle */
             grid-row: 2 / 5;
             grid-column: 2 / 3;
         }
 
-        .colosseum { /* Top right square/small rect */
+        .rome { /* Top right square/small rect */
             grid-row: 2 / 3;
             grid-column: 3 / 4;
         }
 
-        .arc-de-triomf { /* Bottom right square/small rect */
+        .spain { /* Bottom right square/small rect */
             grid-row: 3 / 5;
             grid-column: 3 / 4;
         }
@@ -74,14 +74,14 @@
     </style>
 </head>
 <body>
-
     <div class="collage-container">
-        <div class="item shinjuku-cat" style="background-image: url('URL_HERE');">Tokyo</div>
-        <div class="item eiffel-tower" style="background-image: url('URL_HERE');">Paris</div>
-        <div class="item pagoda" style="background-image: url('URL_HERE');">Temple</div>
-        <div class="item colosseum" style="background-image: url('URL_HERE');">Rome</div>
-        <div class="item arc-de-triomf" style="background-image: url('URL_HERE');">Barcelona</div>
+        <div class="item japan" style="background-image: url('images/collage/japan.jpg');">Japan</div>
+        <div class="item paris" style="background-image: url('images/collage/paris.jpg');">Paris</div>
+        <div class="item china" style="background-image: url('images/collage/china.jpg');">China</div>
+        <div class="item rome" style="background-image: url('images/collage/rome.jpg');">Rome</div>
+        <div class="item spain" style="background-image: url('images/collage/spain.jpg');">Spain</div>
     </div>
 
 </body>
+
 </html>
