--- a/collage.html
+++ b/collage.html
@@ -42,7 +42,7 @@
             grid-column: 1 / 2;
         }
 
-        .paris { /* Top wide rectangle */
+        .rome { /* Top wide rectangle */
             grid-row: 1 / 2;
             grid-column: 2 / 4;
         }
@@ -52,7 +52,7 @@
             grid-column: 2 / 3;
         }
 
-        .rome { /* Top right square/small rect */
+        .paris { /* Top right square/small rect */
             grid-row: 2 / 3;
             grid-column: 3 / 4;
         }
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="collage-container">
-        <div class="item japan" style="background-image: url('images/collage/japan.jpg');">Japan</div>
+        <div class="item japan" style="background-image: url('images/collage/japan.jpg');"></div>
         <div class="item rome" style="background-image: url('images/collage/rome.jpg');">Rome</div>
         <div class="item china" style="background-image: url('images/collage/china.jpg');">China</div>
         <div class="item paris" style="background-image: url('images/collage/paris.jpg');">Paris</div>
@@ -86,4 +86,5 @@
 </body>
 
 </html>
+
 
