--- a/collage.html
+++ b/collage.html
@@ -103,7 +103,7 @@
             grid-column: 1 / 2;
         }
 
-        .paris {
+        .rome {
             grid-row: 1 / 2;
             grid-column: 2 / 4;
         }
@@ -113,7 +113,7 @@
             grid-column: 2 / 3;
         }
 
-        .rome {
+        .paris {
             grid-row: 2 / 3;
             grid-column: 3 / 4;
         }
@@ -175,11 +175,11 @@
 
 <main>
     <div class="collage-container">
-        <div class="item japan" style="background-image: url('images/collage/japan.jpg');">Japan</div>
-        <div class="item rome" style="background-image: url('images/collage/rome.jpg');">Rome</div>
-        <div class="item china" style="background-image: url('images/collage/china.jpg');">China</div>
-        <div class="item paris" style="background-image: url('images/collage/paris.jpg');">Paris</div>
-        <div class="item spain" style="background-image: url('images/collage/spain.jpg');">Spain</div>
+        <div class="item japan" style="background-image: url('images/collage/japan.jpg');"></div>
+        <div class="item rome" style="background-image: url('images/collage/rome.jpg');"></div>
+        <div class="item china" style="background-image: url('images/collage/china.jpg');"></div>
+        <div class="item paris" style="background-image: url('images/collage/paris.jpg');"></div>
+        <div class="item spain" style="background-image: url('images/collage/spain.jpg');"></div>
     </div>
 </main>
 
@@ -195,3 +195,4 @@
 
 </body>
 </html>
+
