--- a/collage.html
+++ b/collage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream Places To Visit</title>
 
+    <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
@@ -16,18 +17,10 @@
             --primary-red: #9E4244;
             --text-dark: #2c2c2c;
             --border-line: #000;
-            --muted-text: #666;
         }
 
-        html {
-            scroll-behavior: smooth;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+        html { scroll-behavior: smooth; }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
             font-family: 'Lato', sans-serif;
@@ -39,22 +32,14 @@
 
         header {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
+            top: 0; left: 0; width: 100%;
             background-color: var(--bg-cream);
             padding: 1.5rem 5%;
             z-index: 999;
             border-bottom: 2px solid var(--border-line);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
         }
 
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 4rem;
-        }
-
+        nav { display: flex; justify-content: center; gap: 4rem; }
         nav a {
             text-decoration: none;
             font-family: 'Playfair Display', serif;
@@ -62,16 +47,12 @@
             color: var(--text-dark);
             transition: 0.3s ease;
         }
-
-        nav a:hover {
-            color: var(--primary-red);
-        }
+        nav a:hover { color: var(--primary-red); }
 
         main {
             padding-top: 120px;
             padding-bottom: 4rem;
-            display: flex;
-            justify-content: center;
+            display: flex; justify-content: center;
         }
 
         .collage-container {
@@ -84,6 +65,7 @@
             grid-template-rows: 1fr 1fr 1fr 1fr;
         }
 
+        /* Base style for all shapes */
         .item {
             background-size: cover;
             background-position: center;
@@ -91,36 +73,21 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-family: 'Playfair Display', serif;
-            font-weight: 600;
-            font-size: 1.2rem;
-            color: white;
-            text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
+            text-decoration: none;
         }
 
-        .japan {
-            grid-row: 1 / 5;
-            grid-column: 1 / 2;
-        }
+        /* Shapes */
+        .japan { grid-row: 1 / 5; grid-column: 1 / 2; clip-path: inset(0); }
+        .rome { grid-row: 1 / 2; grid-column: 2 / 4; clip-path: circle(50% at 50% 50%); }
+        .china { grid-row: 2 / 5; grid-column: 2 / 3; clip-path: polygon(50% 0%,100% 38%,82% 100%,18% 100%,0% 38%); }
+        .paris { grid-row: 2 / 3; grid-column: 3 / 4; clip-path: polygon(50% 0%,0% 100%,100% 100%); }
+        .spain { grid-row: 3 / 5; grid-column: 3 / 4; aspect-ratio: 1 / 1; }
 
-        .rome {
-            grid-row: 1 / 2;
-            grid-column: 2 / 4;
-        }
-
-        .china {
-            grid-row: 2 / 5;
-            grid-column: 2 / 3;
-        }
-
-        .paris {
-            grid-row: 2 / 3;
-            grid-column: 3 / 4;
-        }
-
-        .spain {
-            grid-row: 3 / 5;
-            grid-column: 3 / 4;
+        /* Hover border for shapes */
+        .item:hover {
+            outline: 2px solid #000;
+            outline-offset: -2px;
+            cursor: pointer;
         }
 
         footer {
@@ -130,33 +97,13 @@
             margin-top: 4rem;
         }
 
-        .social-links {
-            display: flex;
-            justify-content: center;
-            gap: 1.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .social-links a {
-            color: var(--text-dark);
-            font-size: 1.4rem;
-            transition: 0.3s ease;
-        }
-
-        .social-links a:hover {
-            color: var(--primary-red);
-        }
+        .social-links { display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 1rem; }
+        .social-links a { color: var(--text-dark); font-size: 1.4rem; transition: 0.3s ease; }
+        .social-links a:hover { color: var(--primary-red); }
 
         @media (max-width: 900px) {
-            .collage-container {
-                grid-template-columns: 1fr;
-                grid-template-rows: auto;
-                height: auto;
-            }
-
-            .item {
-                height: 250px;
-            }
+            .collage-container { grid-template-columns: 1fr; grid-template-rows: auto; height: auto; }
+            .item { height: 250px; }
         }
     </style>
 </head>
@@ -175,11 +122,11 @@
 
 <main>
     <div class="collage-container">
-        <div class="item japan" style="background-image: url('images/collage/japan.jpg');"></div>
-        <div class="item rome" style="background-image: url('images/collage/rome.jpg');"></div>
-        <div class="item china" style="background-image: url('images/collage/china.jpg');"></div>
-        <div class="item paris" style="background-image: url('images/collage/paris.jpg');"></div>
-        <div class="item spain" style="background-image: url('images/collage/spain.jpg');"></div>
+        <a href="link" target="_blank" class="item japan" style="background-image: url('images/collage/japan.jpg');"></a>
+        <a href="link" target="_blank" class="item rome" style="background-image: url('images/collage/rome.jpg');"></a>
+        <a href="link" target="_blank" class="item china" style="background-image: url('images/collage/china.jpg');"></a>
+        <a href="link" target="_blank" class="item paris" style="background-image: url('images/collage/paris.jpg');"></a>
+        <a href="link" target="_blank" class="item spain" style="background-image: url('images/collage/spain.jpg');"></a>
     </div>
 </main>
 
@@ -195,4 +142,3 @@
 
 </body>
 </html>
-
